# fast-xnor-net

./: .gitignore  CMakeLibs.cmake  CMakeLists.txt  README.md
doc/: HyperThreading.md  IntelPCMDrivers.md  SystemIntegrityProtection.md  TurboBoost.md
include/: perf.h
lib/: CMakeLists.txt  Makefile  cmake_install.cmake  pcm_Export.h
lib/drivers/mac/: load.sh  unload.sh
lib/drivers/mac/PcmMsrDriver.kext/Contents/: Info.plist
lib/drivers/mac/PcmMsrDriver.kext/Contents/MacOS/: PcmMsrDriver
lib/elevate/bin.x86-32/: elevate.md5
lib/elevate/bin.x86-64/: elevate.md5
lib/pcm/: pcm-all.sln
lib/pcm/MacMSRDriver/: kextload.sh
lib/pcm/WinMSRDriver/Win7/: mymake.bat
lib/pcm/WinMSRDriver/WinXP/: mymake.bat  sources
lib/perf/: asm.h  perf.cpp  perf_failback.cpp
src/: back_prop.c  back_prop.h  common.h  conv_layer.c  conv_layer.h  fully_con_layer.c  fully_con_layer.h  main.c  main.h  mnist_wrapper.c  mnist_wrapper.h  pool_layer.c  pool_layer.h  random_data.c  random_data.h  tensor.c  tensor.h  xnornet.c  xnornet.h
src/perf/: aux_code.c  common_cost.h  cost.h  example  example.c
